--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -8,4 +8,4 @@
     password: "{{ item.password }}"
     priv: "{{ item.priv | default('*.*:USAGE') }}"
     state: present
-  with_items: mysql_users
+  with_items: "{{ mysql_users }}"
