--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,9 @@ mysql_daemon: mysqld
 mysql_root_username: root
 mysql_root_password: root
 
+# MySQL character set
+mysql_character: ""
+
 # MySQL connection settings.
 mysql_port: 3306
 mysql_bind_address: 0.0.0.0
