--- a/test.yml
+++ b/test.yml
@@ -10,6 +10,7 @@
     mysql_innodb_extra:
       innodb_rollback_on_timeout: 1
     mysql_datadir: "/data/mysql"
+    mysql_character: "utf8"
   roles:
     - ansible-role-mysql
 
